<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="pageData"
            type="org.onyx.moneymoney.database.dao.HomeDataBean" />

        <import type="org.onyx.moneymoney.utils.DateUtils" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@color/primary"
            tools:context=".ui.home.HomeActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/ic_tips"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="11dp"
                    android:textColor="@color/text_color_white"
                    android:text="@{String.valueOf(DateUtils.getCurrentYearMonth())}" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="57dp"
                    android:layout_height="14dp"
                    android:layout_marginTop="15dp"
                    android:textSize="11sp"
                    android:textColor="@color/text_color_white"
                    android:text="@string/text_month_pay" />

                <TextView
                    android:id="@+id/pay_this_month"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="7dp"
                    android:textSize="36sp"
                    android:textColor="@color/text_color_white"
                    android:text="@{pageData.payThisMonth}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="67dp"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:textSize="11sp"
                        android:textColor="@color/text_color_white"
                        android:text="@string/text_month_income" />

                    <TextView
                        android:id="@+id/income_this_month"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:textColor="@color/text_color_white"
                        android:text="@{pageData.incomeThisMonth}" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="13dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/radius_top_16dp"
                    android:layout_height="55dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="2"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"
                        android:textColor="@color/text_color_black"
                        android:text="@{String.valueOf(DateUtils.getMonthDateString())}" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_weight="1"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="13dp"
                        android:textSize="12sp"
                        android:textColor="@color/text_color_black"
                        android:text="周六" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_weight="2"
                        android:layout_marginTop="13dp"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textColor="@color/text_color_black"
                        android:text="@string/text_today_pay" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_weight="2"
                        android:layout_marginTop="13dp"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textColor="@color/text_color_black"
                        android:text="@string/text_today_income" />

                </LinearLayout>

                <!--            <LinearLayout-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="0dp"-->
                <!--                android:layout_weight="1"-->
                <!--                android:background="@color/white"-->
                <!--                tools:ignore="NestedWeights">-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    tools:ignore="NestedWeights" />
                <!--            </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/navi_home"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_marginTop="7dp"
                        android:orientation="vertical"
                        app:navi_select="@{pageData.naviSelect == 0}"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_home"
                            app:tint="@drawable/navi_color_selector"
                            android:duplicateParentState="true"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="28dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:textColor="@drawable/navi_color_selector"
                            android:duplicateParentState="true"
                            android:text="@string/text_home" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        tools:ignore="UselessLeaf" />

                    <LinearLayout
                        android:id="@+id/navi_statistic"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_marginTop="7dp"
                        android:orientation="vertical"
                        app:navi_select="@{pageData.naviSelect == 1}"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_analysis"
                            app:tint="@drawable/navi_color_selector"
                            android:duplicateParentState="true"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="28dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:textColor="@drawable/navi_color_selector"
                            android:duplicateParentState="true"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:text="@string/text_statistics" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <!--        <LinearLayout-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="0dp"-->
            <!--            android:layout_weight="1"-->
            <!--            android:gravity="center_horizontal"-->
            <!--            android:orientation="horizontal">-->

            <!--            <Button-->
            <!--                android:id="@+id/btn_add"-->
            <!--                android:layout_width="110dp"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:text="新增" />-->

            <!--            <Button-->
            <!--                android:id="@+id/btn_del"-->
            <!--                android:layout_width="110dp"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                android:text="删除" />-->

            <!--            <Button-->
            <!--                android:id="@+id/btn_switch"-->
            <!--                android:layout_width="110dp"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                android:text="switch" />-->

            <!--        </LinearLayout>-->

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="7dp"
            app:fabCustomSize="64dp"
            android:src="@drawable/ic_add"
            android:elevation="2dp"
            app:backgroundTint="@color/btn_blue"
            tools:ignore="ContentDescription" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>